WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87690
[Chromium] Cannot show suggestions when using asynchronous spellchecking
https://bugs.webkit.org/show_bug.cgi?id=87690
Summary
[Chromium] Cannot show suggestions when using asynchronous spellchecking
Hironori Bono
Reported
2012-05-28 20:02:11 PDT
Greetings, Due to Chromium Change
r137831
<
http://crrev.com/137831
>, Chromium does not attach suggestions to markers when using asynchronous spellchecking. That is, Chromium always shows "no suggestions" when running Chromium with an "--enable-asynchronous-spellchecking" option and right-clicking a misspelled word, e.g. "thisis". To fix this issue, would it be possible to use local spellcheckers as a fallback method when a marker doss not include suggestions? Regards, Hironori Bono
Attachments
Patch v0
(2.17 KB, patch)
2012-05-28 20:17 PDT
,
Hironori Bono
morrita
: review+
morrita
: commit-queue-
Details
Formatted Diff
Diff
Patch v1 (fixed typos)
(2.17 KB, patch)
2012-05-28 21:31 PDT
,
Hironori Bono
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hironori Bono
Comment 1
2012-05-28 20:17:33 PDT
Created
attachment 144434
[details]
Patch v0 Greetings Morita-san and Tamura-san, Sorry for disturbing you. Would it be possible to review this small change? Regards, Hironori Bono
Hajime Morrita
Comment 2
2012-05-28 21:00:10 PDT
Comment on
attachment 144434
[details]
Patch v0 View in context:
https://bugs.webkit.org/attachment.cgi?id=144434&action=review
The code looks good. Please fix typos before landing.
> Source/WebKit/chromium/ChangeLog:8 > + This change uses WebSpellCheckClient::spellcheck as a follback method to
s/follback/fallback
> Source/WebKit/chromium/ChangeLog:11 > + afford to attach suggestions to all Spelling markers.)
s/Spelling/spelling
Hironori Bono
Comment 3
2012-05-28 21:31:44 PDT
Created
attachment 144440
[details]
Patch v1 (fixed typos) Morita-san, Many thank for your quick review and finding typos. I have uploaded a new change that fixed them. Regards, Hironori Bono
WebKit Review Bot
Comment 4
2012-05-29 02:11:01 PDT
Comment on
attachment 144440
[details]
Patch v1 (fixed typos) Clearing flags on attachment: 144440 Committed
r118740
: <
http://trac.webkit.org/changeset/118740
>
WebKit Review Bot
Comment 5
2012-05-29 02:11:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug