Use WebSpellCheckClient::spellcheck to retrieve suggestions. https://bugs.webkit.org/show_bug.cgi?id=87690

Reviewed by Hajime Morita.

This change uses WebSpellCheckClient::spellcheck as a fallback method to
retrieve suggestions when a marker does not have any suggestions. (It consumes
lots of CPU power to get suggestions for misspelled word, i.e. Chromium cannot
afford to attach suggestions to all spelling markers.)

* src/ContextMenuClientImpl.cpp:
(WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems): Retrieve suggestions if markers do not have any.


Canonical link: https://commits.webkit.org/105482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118740 268f45cc-cd09-0410-ab3c-d52691b4dbfc